...
            android:text="@string/discover"
            android:textColor="@android:color/white"
            android:textSize="40sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/tab_layout_bg"
...
